@@ -10,6 +10,13 @@
     <Style TargetType="{x:Type Button}">
         <Setter Property="Background" Value="#000"></Setter>
         <Setter Property="Foreground" Value="#eee"></Setter>
+       <!-- <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border CornerRadius="0" BorderBrush="#ddd" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter> -->
     </Style>
 
     <Style TargetType="{x:Type ComboBox}">
